mysqlパスワードの環境変数名変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,4 +50,4 @@ test:
 production:
   <<: *default
   database: chat-space_production
-  password: <%= ENV['CHAT-SPACE_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
